--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">AdaptersAndListViews</string>
+    <string name="cancel">Cancel</string>
+    <string name="alert_delete">Are you shure?</string>
+    <string name="delete">Delete</string>
 </resources>
